# ChangeLog for net-misc/fakeidentd
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/fakeidentd/ChangeLog,v 1.19 2004/07/01 20:59:53 squinky86 Exp $

  01 Jul 2004; Jon Hood <squinky86@gentoo.org> fakeidentd-2.0-r1.ebuild:
  change virtual/glibc to virtual/libc

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> fakeidentd-2.0-r1.ebuild:
  Add inherit eutils

  13 Apr 2004; Danny van Dyk <kugelfang@gentoo.org> fakeidentd-2.0-r1.ebuild:
  marked ~amd64

*fakeidentd-2.0-r1 (05 Sep 2003)

  05 Sep 2003; Mike Frysinger <vapier@gentoo.org> :
  Add patch to make sure memory is zeroed out.

*fakeidentd-2.0 (17 Jun 2003)

  17 Jun 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump + created custom tbz2 to hold source files.

*fakeidentd-1.7-r1 (03 Feb 2003)

  10 Feb 2003; Mike Frysinger <vapier@gentoo.org> :
  Fixed the filename of the pid the script writes to.

  03 Feb 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump to fix init.d script #14703.

*fakeidentd-1.7 (23 Oct 2002)

  23 Oct 2002; Mike Frysinger <vapier@gentoo.org> :
  Saved from the Attic ;)  (fakeidentd-1.5 and previous have root exploits)

*fakeidentd-1.4-r8 (3 May 2002)

  6 Jul 2002; phoen][x <phoenixp@gentoo.org> fakeidentd-1.4-r8.ebuild :
  Added KEYWORDS.

  3 May 2002; Donny Davies <woodchip@gentoo.org> :  
  Added LICENSE, SLOT, $Headers.

*fakeidentd-1.4-r7 (1 Apr 2002)

  1 Apr 2002; Donny Davies <woodchip@gentoo.org> fakeidentd-1.4-r7,
  files/fakeidentd.confd files/fakeidentd.rc6 :
  Added an /etc/conf.d/fakeidentd file for those who want to easily change
  what it replies with ;)  Patched the source to write its PID to fakeidentd.pid
  instead of identd.pid.  Tweaked the initscript accordingly.

*fakeidentd-1.4-r6 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :  
  Added initial ChangeLog which should be updated whenever the package is