@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/fakeidentd
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/fakeidentd/ChangeLog,v 1.19 2004/07/01 20:59:53 squinky86 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/fakeidentd/ChangeLog,v 1.20 2004/09/20 00:17:10 vapier Exp $
+
+*fakeidentd-2.2 (19 Sep 2004)
+
+  19 Sep 2004; Mike Frysinger <vapier@gentoo.org> files/fakeidentd.rc,
+  +fakeidentd-2.2.ebuild:
+  Version bump #64285 by Christian Schlotter.
 
   01 Jul 2004; Jon Hood <squinky86@gentoo.org> fakeidentd-2.0-r1.ebuild:
   change virtual/glibc to virtual/libc
